--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-03-13  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* doc/libtool.texi: complete dlopening/libltdl documentation
+
 	* ltconfig.in (osf3*, osf4*, deplibs_check_method): pass_all does
 	not really work; use file_magic instead.
 	(osf3*, osf4*): customize sys_lib_[dl]search_path_spec 
