--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -2587,7 +2587,13 @@ To use libltdl in your program you have include the header file @file{ltdl.h}:
 
 @noindent
 Note that libltdl is not threadsafe, i.e. a multithreaded application
-has to use a mutex for libltdl.
+has to use a mutex for libltdl.  It was reported that GNU/Linux's glibc
+2.0's @code{dlopen} with @samp{RTLD_LAZY} (which libltdl uses by
+default) is not thread-safe, but this problem is supposed to be fixed in
+glibc 2.1.  On the other hand, @samp{RTLD_NOW} was reported to introduce
+problems in multi-threaded applications on FreeBSD.  Working around
+these problems is left as an exercise for the reader; contributions are
+certainly welcome.
 
 @noindent
 The following types are defined in @file{ltdl.h}:
