--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-03-14  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* TODO: we now use full pathnames for `file'
+
 1999-03-14  Thomas Tanner  <tanner@gmx.de>
 
 	* TODO: libltdl is now documented
