--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-03-15  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* ltmain.in: silence ``unbug'' :-) detected by sh.test
+
 1999-03-14  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* TODO: we now use full pathnames for `file'
