--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 1999-03-15  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* configure.in, libtool.spec, NEWS: bump to 1.3a
+	* Branched for release 1.3 (branch-1-3)
+	* configure.in, libtool.spec, NEWS: bump to 1.2g
+
 	* configure.in, libtool.spec: bump to 1.2f
 	* doc/PLATFORMS: ditto
 	* NEWS: libtool 1.2f released
