--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-16  Thomas Tanner  <tanner@gmx.de>
+
+	* ltconfig.in: some cosmetical changes
+	* ltmain.in: ditto
+	
 1999-03-15  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* configure.in, libtool.spec, NEWS: bump to 1.2g
